# gguf-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.md
examples/: basic.rs
src/: config.rs  error.rs  header.rs  lib.rs  main.rs  metadata.rs  model.rs  tensor.rs  tensors.rs
tests/: gguf_model_loader_test.rs  integration_tests.rs
