[package]
name = "gguf-rs"
version = "0.1.0"
edition = "2021"
description = "A production-ready GGUF file parser"
license = "MIT"
authors = ["Denis Sudakov sudakov.denis.2007@gmail.com"]
repository = "https://github.com/denissud/gguf-rs"

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
serial_test = "2.0"
tempfile = "3.8"
