[package]
name = "gguf-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust library for parsing GGUF (GGML Universal Format) files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/gguf-rs"
keywords = ["gguf", "ggml", "parser", "machine-learning"]
categories = ["parsing", "science"]

[dependencies]
axum = "0.7" # Use a recent version
tokio = { version = "1", features = [
    "full",
] } # Needed for the async runtime and TcpListener
byteorder = "1.5" # Add byteorder explicitly
